--- a/Restaurante/src/main/java/com/mycompany/restaurante/Ventana.form
+++ b/Restaurante/src/main/java/com/mycompany/restaurante/Ventana.form
@@ -56,7 +56,7 @@
                   <Component id="inputData" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="information" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="226" max="32767" attributes="0"/>
+              <EmptySpace pref="221" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -64,7 +64,15 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Serif" size="14" style="1"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="ANALITICA DE DATOS UFPSO"/>
+        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+          <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
+            <LineBorder/>
+          </Border>
+        </Property>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="create">
