--- a/ListaSimple/src/main/java/com/mycompany/listasimple/Menu.form
+++ b/ListaSimple/src/main/java/com/mycompany/listasimple/Menu.form
@@ -173,6 +173,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Insertar Nodo por Posici&#xf3;n"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="insertarNodoPorPosicionActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="insertarNodoPorDato">
       <Properties>
